<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/farang_logo"
            android:layout_width="411dp"
            android:layout_height="115dp"
            app:srcCompat="@drawable/bba8e13ccbc8ba6765ddd9e31c407a9c" />


        <TextView
            android:id="@+id/dessert_description_third"
            android:layout_width="247dp"
            android:layout_height="39dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dessert_third_description"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/small_font"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="537dp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="80dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/banan"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="538dp" />

        <TextView
            android:id="@+id/dessert_third_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dessert_third_dish"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/medium_font"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="493dp" />

        <TextView
            android:id="@+id/dessert_description_second"
            android:layout_width="269dp"
            android:layout_height="50dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dessert_second_description"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/small_font"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="678dp" />

        <TextView
            android:id="@+id/dessert_first_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dessert_first_dish"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/medium_font"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="493dp" />

        <TextView
            android:id="@+id/dessert_first_description"
            android:layout_width="259dp"
            android:layout_height="43dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dessert_first_description"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/small_font"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="493dp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="80dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/kokos"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="608dp" />

        <TextView
            android:id="@+id/dessert_second_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dessert_second_dish"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/medium_font"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="493dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="80dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/choklad"
            tools:layout_editor_absoluteX="312dp"
            tools:layout_editor_absoluteY="556dp" />

        <TextView
            android:id="@+id/dessert_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dessert"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/medium_font"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="337dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>

