<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/farang_logo"
            android:layout_width="411dp"
            android:layout_height="126dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bba8e13ccbc8ba6765ddd9e31c407a9c" />


        <TextView
            android:id="@+id/philosophy_text"
            android:layout_width="353dp"
            android:layout_height="176dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/company_philosophy"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/small_font"
            app:layout_constraintBaseline_toBaselineOf="@+id/philosophy_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/philosophy_header"
            android:layout_width="126dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/philosophy_header"
            android:textAlignment="center"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/medium_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/farang_logo"
            app:layout_constraintTop_toBottomOf="@+id/farang_logo" />

        <Button
            android:id="@+id/buttonStarter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="368dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/starters"
            android:textAllCaps="false"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/medium_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/farang_logo" />

        <Button
            android:id="@+id/buttonMainCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/main_course"
            android:textAllCaps="false"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/medium_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStarter" />

        <Button
            android:id="@+id/buttonDessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dessert"
            android:textAllCaps="false"
            android:textColor="@color/bone_white"
            android:textSize="@dimen/medium_font"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMainCourse" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="203dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

